feat: add socket.io integration

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,6 +16,23 @@ spec:
       containers:
       - name: insert-templog
         image: siamatic/insert-templog:latest
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 3000
+          initialDelaySeconds: 10
+          periodSeconds: 15
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 5
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 3000
+          initialDelaySeconds: 10
+          periodSeconds: 15
+          timeoutSeconds: 5
+          failureThreshold: 5
         resources:
           requests:
             memory: 256Mi
