--- a/deploy.yaml
+++ b/deploy.yaml
@@ -4,7 +4,7 @@ metadata:
   name: insert-templog
   namespace: smtrack
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: insert-templog
@@ -13,6 +13,8 @@ spec:
       labels:
         app: insert-templog
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: siamatic
       containers:
       - name: insert-templog
         image: siamatic/insert-templog:latest
@@ -20,18 +22,18 @@ spec:
           httpGet:
             path: /health
             port: 3000
-          initialDelaySeconds: 10
-          periodSeconds: 15
-          timeoutSeconds: 5
+          initialDelaySeconds: 15
+          periodSeconds: 30
+          timeoutSeconds: 15
           successThreshold: 1
           failureThreshold: 5
         livenessProbe:
           httpGet:
             path: /health
             port: 3000
-          initialDelaySeconds: 10
-          periodSeconds: 15
-          timeoutSeconds: 5
+          initialDelaySeconds: 15
+          periodSeconds: 30
+          timeoutSeconds: 15
           failureThreshold: 5
         resources:
           requests:
@@ -71,6 +73,11 @@ spec:
             configMapKeyRef:
               name: influxdb-config
               key: INFLUXDB_TOKEN
+        - name: BROKER
+          valueFrom:
+            configMapKeyRef:
+              name: tms-config
+              key: BROKER
         - name: NODE_ENV
           valueFrom:
             configMapKeyRef:
