feat: update Docker image tag in deployment; modify Firebase project ID and notification topics for legacy support

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -17,7 +17,7 @@ spec:
         kubernetes.io/hostname: siamatic
       containers:
       - name: insert-templog
-        image: siamatic/insert-templog:latest
+        image: siamatic/insert-templog:1.0.1
         readinessProbe:
           httpGet:
             path: /health
